--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dockerode": "^2.2.2",
     "express": "^4.13.1",
     "nconf": "^0.7.1",
+    "request": "^2.58.0",
     "uuid": "^2.0.1"
   }
 }
