--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "docker-events": "0.0.2",
     "dockerode": "^2.2.2",
     "express": "^4.13.1",
+    "level": "^1.2.0",
     "nconf": "^0.7.1",
     "request": "^2.58.0",
     "stream-to-array": "^2.0.2",
