--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "nconf": "^0.7.1",
     "request": "^2.58.0",
     "stream-to-array": "^2.0.2",
-    "temp": "^0.8.3",
+    "tmp": "0.0.26",
     "uuid": "^2.0.1"
   }
 }
