--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "debug": "^2.2.0",
     "docker-events": "0.0.2",
     "dockerode": "^2.2.2",
+    "dockerode-promise": "^0.1.0",
     "express": "^4.13.1",
     "level": "^1.2.0",
     "nconf": "^0.7.1",
     "request": "^2.58.0",
     "stream-to-array": "^2.0.2",
+    "stream-to-promise": "^1.0.4",
     "tmp": "0.0.26",
     "uuid": "^2.0.1"
   }
