--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.4.7",
     "debug": "^2.2.0",
     "docker-events": "0.0.2",
     "dockerode": "^2.2.2",
