--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,10 @@ validator:
     - "8080:8080"
   volumes:
     - "$HOME/.boot2docker/certs/boot2docker-vm:/boot2docker:ro"
-    - "$HOME/tmp:$HOME/tmp"
   environment:
-    DEBUG: index,validation,fetcher
+    DEBUG: "index,validation,fetcher"
     port: 8080
-    tmp: $HOME/tmp
+    tmp: ""
     "docker:cert": /boot2docker/cert.pem
     "docker:key": /boot2docker/key.pem
     "docker:ca": /boot2docker/ca.pem
